# rrfmgz

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md  os-122327000865-metadata.json
config/: bridges.yaml
fix/: info.txt
launch/: force_bar_subpub.launch.sh  random_robot_forest_motion.launch.sh  scout_force_bar_bridge.yaml  scout_in_a_box_with_trees_sim.launch.xml  scout_in_lehrforst_pretty.launch.xml  scout_in_lehrforst_server.launch.xml  scout_in_lehrforst_sim.launch.xml  scout_sensors_rw.launch.xml
models/: scout
python/: force_bar_topic_merger.py  generate_lehrforst_trees_model_sdf.py  plot_robot_path.py  random_robot_forest_motion.py
rpi/: A7670E.py  GNSS.py
scripts/: coverage.py  install_ouster.sh  move_robot_wo_tf.py  plot_robot_path.py  run.sh  setup_external_repos.sh  sim_w_odom.launch.py
setup/: Pi5-ZED-recording.md  Pi5-realsense.md  (+3 more)
src/ros_gz_bunker_lehrforst_sim/: .gitignore  CMakeLists.txt  README.md  package.xml
src/ros_gz_bunker_lehrforst_sim/config/: bridges.yaml
src/ros_gz_bunker_lehrforst_sim/launch/: bunker_in_lehrforst_server.launch.xml  bunker_in_lehrforst_sim.launch.xml
src/ros_gz_bunker_lehrforst_sim/models/: lehrforst  lehrforst_ground  lehrforst_trees
src/ros_gz_bunker_lehrforst_sim/models/bunker/: model.config  model.sdf  model.xacro
src/ros_gz_bunker_lehrforst_sim/models/lehrforst/: model.config
src/ros_gz_bunker_lehrforst_sim/models/lehrforst_ground/: model.sdf
src/ros_gz_bunker_lehrforst_sim/models/lehrforst_trees/: model.config
src/ros_gz_bunker_lehrforst_sim/worlds/: bunker_in_lehrforst.sdf
(+68 files in other folders)
